[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name='MAVez'
version='3.10.0'
description='An intuitive MAVLink library for ArduPilot via pymavlink'
authors=[
    {name='The Pennsylvania State University Unmanned Aerial Systems Club', email='psuuasofficial@gmail.com'}
]
license='GPL-3.0'
readme='README.md'
dependencies=[
    'pymavlink>=2.4.0',
    'pyparsing>=3.2.4',
    'colorlog>=6.9.0',
    'psuuas-lingo>=1.4.0',
    'geographiclib>=2.1'
    
]
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering',
    'Operating System :: OS Independent',
    'Natural Language :: English',
]
keywords=['MAVLink', 'ArduPilot', 'UAS', 'Drone', 'pymavlink', 'MAVez']

[project.optional-dependencies]
docs = [
    "sphinx>=4.0.0",
    "furo",
    "sphinx-autodoc-typehints",
    "pymavlink>=2.4.0"
]

[project.urls]
Homepage = 'https://github.com/UnmannedAerialSystems/MAVez'
